--- a/app/src/main/res/layout/activity_resultados.xml
+++ b/app/src/main/res/layout/activity_resultados.xml
@@ -21,9 +21,30 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/textView17"
+            android:id="@+id/txtTitulo"
             android:textSize="24sp"
             android:textAlignment="center" />
+
+        <TextView
+            android:text="@string/resultados"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView18"
+            android:textSize="18sp"
+            android:textAlignment="center" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtMensaje"
+            android:textAlignment="center" />
+
+        <Button
+            android:text="@string/aceptar"
+            android:layout_width="98dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnAceptar"
+            android:onClick="Aceptar" />
 
     </LinearLayout>
 </RelativeLayout>
